--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
+    "jade": "~1.3.0",
+    "ejs": "~2.3.1",
+    "html": "~0.0.10",
+    "css-parse": "~2.0.0",
+    "css-stringify": "~2.0.0",
+    "multiparty": "~4.1.2",
+    "source-map": "~0.4.2",
+    "is-promise": "~2.0.0",
+    "uglify-js": "~2.4.23"
   }
 }
